--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,20 @@
         <profile>
             <id>directory</id>
             <build>
+            	<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-release-plugin</artifactId>
+							<version>2.5.3</version>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-deploy-plugin</artifactId>
+							<version>2.8.2</version>
+						</plugin>
+					</plugins>
+				</pluginManagement>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
