--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,15 @@
 					<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>1.14</version>
+				<configuration>
+				  <licenseName>apache_v2</licenseName>
+				  <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
