--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
   "compilerOptions": {
     "sourceMap": true,
     "inlineSources": true,
+    "lib": ["es2019", "dom"],
     "module": "esNext",
     "target": "es2017",
     "moduleResolution": "node",
@@ -17,10 +18,17 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "baseUrl": "frontend",
+    "paths": {
+      "Frontend/*": [
+        "*"
+      ]
+    }
   },
   "include": [
-    "frontend/**/*.ts", "frontend/index.js"
+    "frontend/**/*.ts",
+    "types.d.ts"
   ],
   "exclude": []
 }
