ci: update scm tag

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<url>https://github.com/FlowingCode/WCStoriesAddon</url>
 		<connection>scm:git:git://github.com/FlowingCode/WCStoriesAddon.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:/FlowingCode/WCStoriesAddon</developerConnection>
-		<tag>master</tag>
+		<tag>1.x</tag>
 	</scm>
     
     <dependencyManagement>
