--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,15 @@
 		<developerConnection>scm:git:ssh://git@github.com:/FlowingCode/WCStoriesAddon</developerConnection>
 		<tag>1.x</tag>
 	</scm>
-    
+
+    <developers>
+	<developer>
+	    <id>flowingcode</id>
+	    <organization>Flowing Code</organization>
+	    <organizationUrl>https://www.flowingcode.com</organizationUrl>
+	</developer>
+    </developers>
+	
     <dependencyManagement>
         <dependencies>
             <dependency>
